<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Subtle Alarm</string>
    <string name="wordmark">S U B T L E&#160;&#160;A L A R M</string>
    <string name="alarm_off">alarm is resting</string>
    <string name="tone">Tone</string>
    <string name="fade_in">Fade in</string>
    <string name="gentle_vibration">Gentle vibration</string>
    <string name="breathing_light">Breathing light</string>
    <string name="volume">Volume</string>
    <string name="dismiss">dismiss</string>
    <string name="time_to_wake">t i m e&#160;&#160;t o&#160;&#160;w a k e</string>
    <string name="dismiss_hint">or tap anywhere, or press power or volume</string>
    <string name="footer_hint">wakes you softly, lets them sleep</string>
    <string name="notif_channel_alarm">Alarm</string>
    <string name="notif_title">Subtle Alarm</string>
    <string name="notif_text">Softly waking you</string>
    <string name="alarm_on">alarm on</string>
    <string name="alarm_off_label">alarm off</string>
</resources>
